Minor fixes to html js and css

--- a/ai.finto.fi/static/css/style.css
+++ b/ai.finto.fi/static/css/style.css
@@ -186,8 +186,7 @@ header a:hover {
 
 #content {
   background-color: var(--light);
-  padding: 4rem;
-  padding-top: 2rem;
+  padding: 2rem 4rem;
 }
 
 #text-box {
