--- a/ai.finto.fi/static/css/style.css
+++ b/ai.finto.fi/static/css/style.css
@@ -378,6 +378,29 @@ header a:hover {
   font-size: 1.25rem;
 }
 
+#show-project-info {
+  background: none;
+  border: none;
+  color: var(--dark-1);
+  padding-left: 0;
+}
+#show-project-info.collapsed .if-not-collapsed {
+  display: none;
+}
+
+#show-project-info:not(.collapsed) .if-collapsed {
+  display: none;
+}
+
+#show-project-info span span {
+  display: inline-block;
+  width: 1.25rem;
+}
+
+#project-info {
+  margin-left: 1.25rem;
+}
+
 .suggest-form-label {
   margin-top: 1rem;
   margin-bottom: 1rem;
