Add hover effect on links in footer

--- a/ai.finto.fi/static/css/style.css
+++ b/ai.finto.fi/static/css/style.css
@@ -113,7 +113,7 @@ header img {
   padding-left: 30px;
 }
 
-header a:hover {
+header a:hover, footer a:hover {
   color: var(--accent-2) !important;
   text-decoration: underline !important;
 }
