Swap order of text selection boxes and checkbox

--- a/ai.finto.fi/static/css/style.css
+++ b/ai.finto.fi/static/css/style.css
@@ -457,9 +457,12 @@ select:valid:focus {
 }
 
 #language-buttons label{
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   /* max-width: 200px; */
   /* padding: 8px; */
+}
+#badge-autodetect {
+  font-size: x-small;
 }
 
 #limit-buttons label{
