Better variable name

--- a/ai.finto.fi/static/css/style.css
+++ b/ai.finto.fi/static/css/style.css
@@ -381,7 +381,7 @@ header a:hover, footer a:hover {
   font-size: 1.25rem;
 }
 
-#vocabulary-info img {
+#vocabulary-display-name img {
   height: 11px;
   margin-bottom: 10px;
   margin-left: 2px;
