Move vocab full name to menu

--- a/ai.finto.fi/static/css/style.css
+++ b/ai.finto.fi/static/css/style.css
@@ -381,10 +381,11 @@ header a:hover, footer a:hover {
   font-size: 1.25rem;
 }
 
-#vocabulary-display-name img {
-  height: 11px;
-  margin-bottom: 10px;
-  margin-left: 2px;
+#vocab-url {
+  margin-left: 6px;
+}
+#vocab-url img {
+  width: 13px;
 }
 
 .suggest-form-label {
